--- a/src/components/atoms/Text/text.css
+++ b/src/components/atoms/Text/text.css
@@ -474,10 +474,14 @@ h5 {
 }
 
 .c-hero__content {
-  max-width: 50%;
   padding-top: 100px;
   padding-bottom: 0;
 }
+
+
+  /* B - CROP */
+
+
 
 .c-ctn.cc-70.cc-absolute {
   margin-bottom: 0;
@@ -501,9 +505,7 @@ h5 {
 .c-pricing__info {
   padding: 25px 32px 50px;
 }
-.ruby-color {
-  color: #ff2868;
-}
+
 
 .c-pricing__features {
   padding-right: 32px;
@@ -543,10 +545,6 @@ ul {
   color: rgba(12, 29, 54, 0.65);
 }
 
-.c-pricing__item.cc-green {
-  width: 35vw;
-  background-color: rgba(53, 200, 159, 0.09);
-}
 
 .is--white.opacity-60 {
   margin-bottom: 16px;
@@ -554,4 +552,148 @@ ul {
   font-size: 16px;
   text-decoration: none;
 }
+
+.c-line-separator.cc-green {
+  background-color: rgba(53, 200, 159, 0.65);
+}
+
+.c-benefits__item.cc-blue {
+  background-color: rgba(0, 154, 255, 0.09);
+}
+.c-benefits__item.cc-orange {
+  background-color: rgba(245, 158, 11, 0.09);
+}
+.c-benefits__item.cc-ruby {
+  background-color: rgba(255, 40, 104, 0.09);
+}
+.c-benefits__item.cc-green {
+  background-color: rgba(53, 200, 159, 0.09);
+}
+
+.c-line-separator.cc-blue {
+  background-color: rgba(0, 154, 255, 0.65);
+}
+
+.dark-blue-color {
+  color: #0f00c0;
+}
+
+.c-line-separator.cc-dark-blue {
+  background-color: rgba(15, 0, 192, 0.65);
+}
+
+.orange-color {
+  color: #ff9c27;
+}
+
+.c-line-separator.cc-orange {
+  background-color: rgba(255, 156, 39, 0.65);
+}
+
+
+/* What can stryve do */
+
+
+.is--white.p-btm__20 {
+  padding-bottom: 20px;
+}
+
+
+/* career screen */
+
+
+.is--white.opacity-80 {
+  color: hsla(0, 0%, 100%, 0.8);
+}
+
+/* form part */
+
+/* .c-flex___right.cc-35 {
+  width: 35%;
+  justify-content: space-between;
+  align-self: flex-end;
+}
+
+.c-flex___right {
+  display: flex;
+}
+
+.form-block {
+  width: 50%;
+  margin-bottom: 0;
+  align-self: flex-end;
+}
+.form-block.positions {
+  width: 100%;
+}
+
+.w-form {
+  margin: 0 0 15px;
+}
+
+.search-holder {
+  position: relative;
+  display: flex;
+}
+
+.c-search-input.p-left__25 {
+  margin-bottom: 0;
+  padding-left: 15%;
+}
+
+.c-search-input {
+  padding-left: 40%;
+  border-top: 1px #000;
+  border-right: 1px #000;
+  border-left: 1px #000;
+}
+
+.w-input {
+  display: block;
+  width: 100%;
+  height: 38px;
+  padding: 8px 12px;
+  margin-bottom: 10px;
+  font-size: 14px;
+  line-height: 1.42857143;
+  color: #333;
+  vertical-align: middle;
+  background-color: #fff;
+  border: 1px solid #ccc;
+}
+input {
+  color: inherit;
+  font: inherit;
+  margin: 0;
+}
+
+input {
+  line-height: normal;
+}
+
+input.w-button {
+  -webkit-appearance: button;
+}
+
+.w-button {
+  display: inline-block;
+  padding: 9px 15px;
+  background-color: #3898ec;
+  color: #fff;
+  border: 0;
+  line-height: inherit;
+  text-decoration: none;
+  cursor: pointer;
+  border-radius: 0;
+} */
+
+.p-top__32-2 {
+  padding-top: 32px;
+}
+
+
+/* CONTACT PAGE */
+
+
+
 
