--- a/src/css/B-Corp/meaning.css
+++ b/src/css/B-Corp/meaning.css
@@ -98,15 +98,15 @@
 /* .ruby-color {
   color: #ff2868;
 } */
-.green-color {
+/* .green-color {
   color: #35c89f;
-}
-.dark-blue-color {
+} */
+/* .dark-blue-color {
   color: #0f00c0;
-}
-.blue-color {
+} */
+/* .blue-color {
   color: #0f00c0;
-}
+} */
 /* .c-pricing__item {
   border-radius: 8px;
   background-color: #fdf5f7;
@@ -211,18 +211,18 @@
 /* .c-line-separator.cc-ruby {
   background-color: rgba(255, 40, 104, 0.65);
 } */
-.c-line-separator.cc-green {
+/* .c-line-separator.cc-green {
   background-color: rgba(53, 200, 159, 0.65);
-}
-.c-line-separator.cc-blue {
+} */
+/* .c-line-separator.cc-blue {
   background-color: rgba(0, 154, 255, 0.65);
-}
-.c-line-separator.cc-dark-blue {
+} */
+/* .c-line-separator.cc-dark-blue {
   background-color: rgba(15, 0, 192, 0.65);
-}
-.c-line-separator.cc-orange {
+} */
+/* .c-line-separator.cc-orange {
   background-color: rgba(255, 156, 39, 0.65);
-}
+} */
 .heading-8 {
   font-size: 94.44px;
   line-height: 113px;
@@ -234,6 +234,6 @@
 /* .p-left__20 {
   padding-left: 20px;
 } */
-.orange-color {
+/* .orange-color {
   color: #ff9c27;
-}
+} */
