--- a/src/css/Homepage/main.css
+++ b/src/css/Homepage/main.css
@@ -1236,9 +1236,9 @@ a:hover {
 /* .green-color {
   color: #35c89f;
 } */
-.dark-blue-color {
+/* .dark-blue-color {
   color: #0f00c0;
-}
+} */
 .c-assess__svg {
   width: 100%;
   height: 100%;
@@ -1737,9 +1737,9 @@ a:hover {
 /* .no-mg.p-r__10 {
   padding-right: 10px;
 } */
-.orange-color {
+/* .orange-color {
   color: #ff9c27;
-}
+} */
 
 /* .p-btm__12 {
   padding-bottom: 12px;
