--- a/src/components/atoms/button/button.css
+++ b/src/components/atoms/button/button.css
@@ -137,3 +137,23 @@
   background-color: rgba(0, 154, 255, 0.09);
 }
 
+.c-pricing-btn__holder {
+  padding-right: 32px;
+  padding-left: 32px;
+}
+
+.c-btn.cc-with-icon.cc-light.white {
+  background-color: hsla(0, 0%, 100%, 0.9);
+}
+
+.c-btn.cc-with-icon {
+  padding-right: 20px;
+  padding-left: 20px;
+}
+
+.c-btn.cc-light {
+  border: 2px solid #000;
+  background-color: transparent;
+  color: #0f172a;
+}
+
