--- a/src/components/organisms/navbar/nav.css
+++ b/src/components/organisms/navbar/nav.css
@@ -1,4 +1,3 @@
-/*! CSS Used from: https://uploads-ssl.webflow.com/6135d217a84bbf3ca90a0652/css/stryve-project-5bdce3c7936e32726719e868.webflow.514180e1c.min.css */
 nav {
   display: block;
 }
@@ -172,7 +171,15 @@ svg:not(:root) {
     padding-left: 10px;
   }
 }
-
+h5 {
+  margin-top: 0;
+  margin-bottom: 10px;
+  color: #0f172a;
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 400;
+  letter-spacing: -0.02em;
+}
 .c-ctn {
   width: 85%;
   max-width: 1280px;
